--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
     <button id="notification-button" class="install-btn" style="display: none; background-color: #28a745;" onclick="requestNotificationPermission()" title="Enable push notifications for water level updates">🔔 Enable Notifications</button>
     
     <div class="utility-buttons">
-        <button class="utility-button" onclick="clearCacheAndRefresh()" title="Clear all cached data and reset the app" style="background: linear-gradient(135deg, #ff6b6b 0%, #ee5a6f 100%); font-weight: bold; font-size: 16px; padding: 12px 20px; box-shadow: 0 4px 15px rgba(255, 107, 107, 0.3); transition: all 0.3s ease;">CLEAR ALL DATA</button>
+        <button class="utility-button" onclick="clearCacheAndRefresh()" title="Clear all cached data and reset the app" style="background: linear-gradient(135deg, #ff6b6b 0%, #ee5a6f 100%); font-weight: bold; font-size: 16px; padding: 12px 20px; box-shadow: 0 4px 15px rgba(255, 107, 107, 0.3); transition: all 0.3s ease;">CLEAR APP DATA</button>
         <!-- ALERT SETTINGS DISABLED: Button removed from UI
         <button class="utility-button" onclick="openGlobalAlertSettings()" style="background-color: #17a2b8;" title="Configure alert thresholds for all pages">⚙️ Alert Settings</button>
         -->
@@ -935,5 +935,6 @@
 
 </body>
 </html>
+
 
 
