--- a/admin.html
+++ b/admin.html
@@ -348,7 +348,7 @@
                         return;
                     }
 
-                    const newConfig = { appTitle: 'IITMZ Water Management', defaultLanguage: 'en', pages: {} };
+                    const newConfig = { appTitle: 'IITM Water Management', defaultLanguage: 'en', pages: {} };
                     const translations = {};
                     languages.forEach(lang => {
                         translations[lang] = { ...baseTranslations[lang] };
