--- a/admin.html
+++ b/admin.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Panel - Configuration Manager</title>
-    <script src="config.js"></script>
+    <script src="IITM-LVL-DSPLY-RT-MON_backend/config.js"></script>
     <style>
         * {
             margin: 0;
