--- a/app.html
+++ b/app.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="IIT_Madras_Logo.ico" type="image/x-icon">
     <link rel="manifest" href="/IITM-LVL-DSPLY-RT-MON/manifest.json">
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-    <script src="/IITM-LVL-DSPLY-RT-MON_backend/config.js"></script>
+    <script src="config.js"></script>
     <script src="translation-manager.js"></script>
     <style>
         body {
