--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="IITM Water Mgmt">
     <link rel="apple-touch-icon" href="IIT_Madras_Logo_192.png">
-    <script src="/IITM-LVL-DSPLY-RT-MON_backend/config.js"></script>
+    <script src="config.js"></script>
     
     <style>
         body {
